# fashion_docker

./: README.md  dockerbuild.sh  fashion2_aai4r.Dockerfile  gdrivedl.py  model_download.sh  run.sh  run_colcon.sh  run_container.sh
fashion_att_pkg/: package.xml  setup.cfg  setup.py
fashion_att_pkg/fashion_att_pkg/: fashion_attribute.py
